plugins/kotlin/idea/tests/testData/multiplatform/expectActualLineMarkers/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in [iosX64, sharedLinux] modules'")!>ActualizedInSharedAndLeaf<!>

expect class <!LINE_MARKER("descr='Has actuals in [linuxArm64, iosX64, linuxX64] modules'")!>ActualizedInLeaves<!>
